# liborigin

./: CMakeLists.txt  Makefile  Makefile.DARWIN  Makefile.LINUX  Makefile.am  Makefile.in  Makefile.orig  OPJFile.cc  OPJFile.cpp  OPJFile.h  Origin600Parser.cpp  Origin610Parser.cpp  Origin700Parser.cpp  Origin750Parser.cpp  Origin750Parser.h  Origin800Parser.cpp  Origin810Parser.cpp  OriginAnyParser.cpp  OriginAnyParser.h  OriginDefaultParser.cpp  OriginFile.cpp  OriginFile.h  OriginObj.h  OriginParser.cpp  OriginParser.h  README  config.h.in  endianfstream.h  endianfstream.hh  import.qs  liborigin.la  liborigin.pc.in  liborigin2.pro  opj2dat  opj2dat.cc  opj2dat.cpp  readme  tree.h  tree.hh
.github/workflows/: main.yml
doc/: Doxyfile
